--- a/heihbd.html
+++ b/heihbd.html
@@ -56,7 +56,7 @@
      
      <p id="halo" class="halo"></p>
      
-     <div><blockquote id='bq' data-text='㋡'>
+     <div><blockquote id='bq' data-text='G'>
        <p id="kalimat">Aku Ada Sesuatu Nih 🤣❤️</p>
 
        <p id="pesan1">Klik 4 LOVE di Bawah! 😆❤️</p>
@@ -75,7 +75,7 @@
        <p id="pesan6" class="gaya2">Moga panjang umur biar tiap tahun bisa traktirin aku wkwk 😆️</p>
        <p id="pesan7" class="gaya2">Sehat selalu ya!</p>
 
-       <p id="pesan8" class="gaya2">Canda wkwwk :v</p>
+       <p id="pesan8" class="gaya2">Canda wkwwk </p>
        <p id="pesan9" class="gaya2">Oh iya, semoga di hari spesialmu ini kamu dapat menjadi pribadi yang lebih baik yaa.. 🥳</p>
        <p id="pesan10" class="gaya2">Happy Level Up Day!! 🥳</p>
 
@@ -116,7 +116,7 @@
   }
 
   //Variable Pertanyaan Akhir
-  var tanya = 'Mau Kado Gak Nih? 😶❤️';
+  var tanya = 'Mau Kado Gak Nih? 😶';
   var opstanya = 'Ayo jawab 😆';
   var tompositif = 'Mau';
   var tomnegatif = 'Engga';
