--- a/heihbd.html
+++ b/heihbd.html
@@ -57,9 +57,9 @@
      <p id="halo" class="halo"></p>
      
      <div><blockquote id='bq' data-text='G'>
-       <p id="kalimat">Aku Ada Sesuatu Nih 🤣❤️</p>
+       <p id="kalimat">Aku Ada Sesuatu Nih 🤣️</p>
 
-       <p id="pesan1">Klik 4 LOVE di Bawah! 😆❤️</p>
+       <p id="pesan1">Klik 4 LOVE di Bawah! 😆️</p>
        <div id="kolombaru">
          <li id="lv1">🤍</li>
          <li id="lv2">🤍</li>
